--- a/index.html
+++ b/index.html
@@ -241,7 +241,11 @@
 
         </div>
 
+        
+        <p class="toOnline en">This CV is available online at <a href="https://wavey-desu.github.io/Online-CV/" target="_blank" rel="noopener noreferrer">wavey-desu.github.io/Online-CV/</a></p>
+        <p class="toOnline es">Este CV está disponible en <a href="https://wavey-desu.github.io/Online-CV/" target="_blank" rel="noopener noreferrer">wavey-desu.github.io/Online-CV/</a></p>
     </div>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="./index.js"></script>
