--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="info">
         
         <div class="imgCont">
-            <img src="./resources/abf.png" alt="profilePic" class="profilePic">
+            <img src="./resources/LI-PP(1).png" alt="profilePic" class="profilePic">
         </div>
 
         <div class="contactCont">
@@ -21,7 +21,7 @@
                 <li><i class="fa-solid fa-inbox"></i><a href="mailto:wavey.dev0@gmail.com">wavey.dev0@gmail.com</a></li>
                 <li><i class="fa-solid fa-phone"></i><a href="">+52 81 8287 7003</a></li>
                 <li><i class="fa-solid fa-location-crosshairs"></i><a href="https://www.google.com/maps/place/Monterrey,+Nuevo+Leon/@25.6487281,-100.4431818,11z/data=!3m1!4b1!4m5!3m4!1s0x86629531b437f8f5:0xa3d3d3ca6ac89894!8m2!3d25.6866142!4d-100.3161126" target="_blank" rel="noopener noreferrer">Monterrey, Mexico</a></li>
-                <li><i class="fa-solid fa-globe"></i><a href="https://www.wavey.dev" target="_blank" rel="noopener noreferrer">www.wavey.dev</a></li>
+                <!-- <li><i class="fa-solid fa-globe"></i><a href="https://www.wavey.dev" target="_blank" rel="noopener noreferrer">www.wavey.dev</a></li> -->
                 <li><i class="fa-brands fa-linkedin-in"></i><a href="https://www.linkedin.com/in/alex-wvy-barrera/" target="_blank" rel="noopener noreferrer">linkedin.com/in/alex-wvy-barrera</a></li>
                 <li><i class="fa-brands fa-github"></i><a href="https://github.com/wavey-desu" target="_blank" rel="noopener noreferrer">github.com/wavey-desu</a></li>
             </ul>
@@ -101,16 +101,16 @@
             <button class="esToggle"><span><img class="langIcon" src="./resources/mexico.png" alt="Mexico flag icons created by Freepik"></span></button>
         </div>
         
-        <button class="downloadBtn en"><a href="./resources/WVY's Online CV-en.pdf" download="Alejandro_Barrera_CV-en">Download<i class="fa-solid fa-download"></i></a></button>
-        <button class="downloadBtn es"><a href="./resources/WVY's Online CV-es.pdf" download="Alejandro_Barrera_CV-es">Descargar<i class="fa-solid fa-download"></i></a></button>
+        <button class="downloadBtn en"><a href="./resources/Alejandro_Barrera_CV_en.pdf" download="Alejandro_Barrera_CV-en">Download<i class="fa-solid fa-download"></i></a></button>
+        <button class="downloadBtn es"><a href="./resources/Alejandro_Barrera_CV_es.pdf" download="Alejandro_Barrera_CV-es">Descargar<i class="fa-solid fa-download"></i></a></button>
 
         <div class="titleCont">
-            <i class="angle1 fa-solid fa-angle-left"></i>
+            <!-- <i class="angle1 fa-solid fa-angle-left"></i> -->
             <h1><span class="aljn">Alejandro</span> Barrera</h1>
-            <h2>Web Developer</h2>
+            <h2>&lt;Web Developer/&gt;</h2>
             <p class="en">Self-taught, knowledge-hungry Web Developer with a proclivity for clean, intuitive, optimized design and code. Eager to pick up, learn and implement new technologies and methods every day.</p>
             <p class="es">Desarrollador Web completamente autodidacta. Creo código y diseños limpios, intuitivos y optimizados. Siempre en búsqueda de nuevos conocimientos y herramientas para crear mejores productos.</p>
-            <i class="angle2 fa-solid fa-angle-right"></i>
+            <!-- <i class="angle2 fa-solid fa-angle-right"></i> -->
         </div>
         <!-- SKILLS -->
         <div class="mainInfoCont skills">
@@ -118,27 +118,26 @@
             <h1 class="mainInfoHeader es">Competencias Técnicas</h1>
 
             <ul>
+                <li>React</li>
                 <li>Javascript</li>
-                <li>HTML</li>
-                <li>CSS</li>
+                <li>Typescript</li>
+                <li>Redux/Toolkit</li>
                 <li>NodeJS</li>
-                <li>ReactJS</li>
-                <li>jQuery</li>
-                <li>ExpressJS</li>
-                <li>ES6</li>
-                <li>API's</li>
-                <li>SPA's</li>
+                <li>HTML</li>
+                <li>CSS/SCSS</li>
+                <li>Material UI</li>
+                <li>Vite</li>
+                <li>Express</li>
+                <li>REST API's</li>
                 <li>Git</li>
                 <li>GitHub</li>
+                <li>Azure</li>
+                <li>Vercel</li>
                 <li>MongoDB</li>
                 <li>Firebase</li>
-                <li>SQL</li>
-                <li>Bootstrap</li>
-                <li>Material UI</li>
-                <li>Responsiveness</li>
-                <li>OAuth</li>
-                <li>Python</li>
-                <li>Linux</li>
+                <li>Figma</li>
+                <li>Responsive Design</li>
+                <li>Ubuntu</li>
             </ul>
         </div>
 
@@ -149,8 +148,8 @@
 
             <div class="workCont">
                 <span><h1>Tech Lead</h1> <h1>-</h1> <h2>Kidron Monterrey</h2></span>
-                <h3 class="en">2018 - Current</h3>
-                <h3 class="es">2018 - Actual</h3>
+                <h3 class="en">2018 - 2022</h3>
+                <h3 class="es">2018 - 2022</h3>
 
                 <ul class="en">
                     <li>Collaborate with business planning department to monitor and adjust company-wide technology utilization.</li>
@@ -165,9 +164,30 @@
                     <li>Implementar el modelado y diseño en 3D para optimizar los procesos de fabricación y la retroalimentación del producto a los clientes.</li>
                 </ul>
             </div>
+
+            <div class="workCont">
+                <span><h1>Front-end Lead</h1> <h1>-</h1> <h2>Muub Connect</h2></span>
+                <h3 class="en">2022 - Current</h3>
+                <h3 class="es">2022 - Actual</h3>
+
+                <ul class="en">
+                    <li>Develop responsive, scalable and efficient Front-end platfrom with React </li>
+                    <li>Implement Javascript libraries to create a powerful app</li>
+                    <li>Design UI elements and mock-ups using Figma</li>
+                    <li>Create efficient solutions for techological hurdles</li>
+                    <li>Manage Front-end team to effectively solve client demands </li>
+                </ul>
+                <ul class="es">
+                    <li>Desarrolar Plataforma Front-end responsiva, escalable y efficiente usando React</li>
+                    <li>Implementar librerias de Javascript para crear una applicacion potente y effectiva</li>
+                    <li>Diseñar elementos y mock-ups de UI en Figma</li>
+                    <li>Crear soluciones efectivas para retos tecnologicos</li>
+                    <li>Administrar equipo de Front-end para resolver demandas de clientes</li>
+                </ul>
+            </div>
         </div>
 
-        <div class="mainInfoCont projects">
+        <!-- <div class="mainInfoCont projects">
             <h1 class="mainInfoHeader en">Projects</h1>
             <h1 class="mainInfoHeader es">Proyectos</h1>
 
@@ -213,7 +233,7 @@
                     <li>Totalmente responsive para movil y escritorio</li>
                 </ul>
             </div>
-        </div>
+        </div> -->
 
         <div class="mainInfoCont courses">
             <h1 class="mainInfoHeader en">Courses & Trainings</h1>
