downloadfile size update

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             <button class="esToggle"><span><img class="langIcon" src="./resources/mexico.png" alt="Mexico flag icons created by Freepik"></span></button>
         </div>
         
-        <button class="downloadBtn en"><a href="./resources/Alejandro_Barrera_CV_en.pdf" download="Alejandro_Barrera_CV-en">Download<i class="fa-solid fa-download"></i></a></button>
-        <button class="downloadBtn es"><a href="./resources/Alejandro_Barrera_CV_es.pdf" download="Alejandro_Barrera_CV-es">Descargar<i class="fa-solid fa-download"></i></a></button>
+        <button class="downloadBtn en"><a href="./resources/Alejandro_Barrera_CV-EN.pdf" download="Alejandro_Barrera_CV-EN">Download<i class="fa-solid fa-download"></i></a></button>
+        <button class="downloadBtn es"><a href="./resources/Alejandro_Barrera_CV-ES.pdf" download="Alejandro_Barrera_CV-ES">Descargar<i class="fa-solid fa-download"></i></a></button>
 
         <div class="titleCont">
             <!-- <i class="angle1 fa-solid fa-angle-left"></i> -->
