--- a/index.html
+++ b/index.html
@@ -152,12 +152,14 @@
                 <h3 class="es">2018 - 2022</h3>
 
                 <ul class="en">
+                    <li>Created various React applications for internal management purposes</li>
                     <li>Collaborate with business planning department to monitor and adjust company-wide technology utilization.</li>
                     <li>Analyze business processes to propose optimal software applications for unique requirements.</li>
                     <li>Manage company website with regards to design, crash-handling and discoverability with Google keywords, and SEO monitoring</li>
                     <li>Implement 3D modeling and design to optimize manufacturing processes and product feedback to clients.</li>
                 </ul>
                 <ul class="es">
+                    <li>Crear varias aplicaciones usando React para gestión interna</li>
                     <li>Colaborar con el departamento de planificación para monitorear y ajustar la utilización de tecnología en la empresa.</li>
                     <li>Analizar los procesos comerciales para proponer aplicaciones de software óptimas para requisitos únicos.</li>
                     <li>Administrar el sitio web de la empresa con respecto al diseño, el manejo de fallas y el descubrimiento con palabras clave de Google y monitoreo de SEO</li>
