--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                 <li>HTML</li>
                 <li>CSS/SCSS</li>
                 <li>Material UI</li>
+                <li>Tailwind CSS</li>
                 <li>Vite</li>
                 <li>Express</li>
                 <li>REST API's</li>
@@ -147,13 +148,38 @@
             <h1 class="mainInfoHeader es">Experiencia</h1>
 
             <div class="workCont">
+                <span><h1>Front-end Lead</h1> <h1>-</h1> <h2>Muub Connect</h2></span>
+                <h3 class="en">2022 - Current</h3>
+                <h3 class="es">2022 - Actual</h3>
+
+                <ul class="en">
+                    <li>Develop responsive, scalable and efficient Front-end platfrom from scratch with React </li>
+                    <li>Implement Redux and ContextAPI for applicacion state management and API interactions</li>
+                    <li>Use MaterialUI to create a clean and intuitive user-experience</li>
+                    <li>Utilize React and Redux DevTools to validate and expediate application development and testing</li>
+                    <li>Design UI elements and mock-ups using Figma</li>
+                    <li>Create efficient solutions for techological hurdles</li>
+                    <li>Manage Front-end team to effectively solve client demands </li>
+                    <li>Improve client acquisition and retention using technological solutions</li>
+                </ul>
+                <ul class="es">
+                    <li>Desarrolar Plataforma Front-end responsiva, escalable y efficiente usando React</li>
+                    <li>Implementar librerias de Javascript para crear una applicacion potente y effectiva</li>
+                    <li>Diseñar elementos y mock-ups de UI en Figma</li>
+                    <li>Crear soluciones efectivas para retos tecnologicos</li>
+                    <li>Administrar equipo de Front-end para resolver demandas de clientes</li>
+                    <li>Mejorar la adquisición y retención de clientes utilizando soluciones tecnológicas</li>
+                </ul>
+            </div>
+
+            <div class="workCont">
                 <span><h1>Tech Lead</h1> <h1>-</h1> <h2>Kidron Monterrey</h2></span>
                 <h3 class="en">2018 - 2022</h3>
                 <h3 class="es">2018 - 2022</h3>
 
                 <ul class="en">
-                    <li>Created various React applications for internal management purposes</li>
-                    <li>Collaborate with business planning department to monitor and adjust company-wide technology utilization.</li>
+                    <li>Creat various React applications for inventory & payroll management</li>
+                    <li>Help the company take its first steps into implementing business technology</li>
                     <li>Analyze business processes to propose optimal software applications for unique requirements.</li>
                     <li>Manage company website with regards to design, crash-handling and discoverability with Google keywords, and SEO monitoring</li>
                     <li>Implement 3D modeling and design to optimize manufacturing processes and product feedback to clients.</li>
@@ -167,26 +193,6 @@
                 </ul>
             </div>
 
-            <div class="workCont">
-                <span><h1>Front-end Lead</h1> <h1>-</h1> <h2>Muub Connect</h2></span>
-                <h3 class="en">2022 - Current</h3>
-                <h3 class="es">2022 - Actual</h3>
-
-                <ul class="en">
-                    <li>Develop responsive, scalable and efficient Front-end platfrom with React </li>
-                    <li>Implement Javascript libraries to create a powerful app</li>
-                    <li>Design UI elements and mock-ups using Figma</li>
-                    <li>Create efficient solutions for techological hurdles</li>
-                    <li>Manage Front-end team to effectively solve client demands </li>
-                </ul>
-                <ul class="es">
-                    <li>Desarrolar Plataforma Front-end responsiva, escalable y efficiente usando React</li>
-                    <li>Implementar librerias de Javascript para crear una applicacion potente y effectiva</li>
-                    <li>Diseñar elementos y mock-ups de UI en Figma</li>
-                    <li>Crear soluciones efectivas para retos tecnologicos</li>
-                    <li>Administrar equipo de Front-end para resolver demandas de clientes</li>
-                </ul>
-            </div>
         </div>
 
         <!-- <div class="mainInfoCont projects">
